# quick-mess

./: .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: chat.hpp  client.cpp  client.hpp  data.cpp  data.hpp  font.hpp  main.cpp  window.cpp  window.hpp
common/: CMakeLists.txt
common/include/: common.hpp
scripts/: build.sh  run_client.sh  run_server.sh  setup.sh
server/: CMakeLists.txt
server/src/: chat.cpp  chat.hpp  clock.cpp  clock.hpp  data.hpp  main.cpp  server.cpp  server.hpp
